--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tushar Mahajan</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="assets/x-icon" href="/assets/favicon.ico">
     <meta name="description" content="
     Discover my portfolio crafted with HTML, CSS, and JS. Immerse yourself in a 
     dynamic showcase of my projects, thoughtfully designed and skillfully coded. 
