--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon" />
-                <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+                <p><a href="mailto:tusharmahajan080@gmail.com">tusharmahajan080@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
-                <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
+                <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon"  />
                 <p><a href="https://www.linkedin.com">LinkedIn</a></p>
             </div>
         </div>
@@ -272,7 +272,7 @@
                 </ul>
             </div>
         </nav>
-        <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+        <p>Copyright &#169; 2023 Tushar Mahajan All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
