--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </div>
         </div>
     </nav>
-    <section id="profile">
-        <div class="section__pic-container">
+    <div id="profile">
+        <div class="section__pic-container-profile">
             <img src="./assets/profile-pic.jpg" alt="Tushar Mahajan profile picture" />
         </div>
         <div class="section__text">
@@ -72,10 +72,12 @@
                     onclick="location.href='https://www.youtube.com/channel/UCCKlzjC09UeUeCABtaszHbg'">
             </div>
         </div>
-    </section>
-    <section id="about">
+    </div>
+    <br><br><br>
+    <div id="about">
         <p class="section__text__p1">Get To Know More</p>
         <h1 class="title">About Me</h1>
+        <h3 class="about-passion">Passionate Cricketer, Professional Engineer - Balancing Sport and Science.</h3>
         <div class="section-container">
             <div class="section__pic-container">
                 <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic" />
@@ -84,30 +86,77 @@
                 <div class="about-containers">
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="Experience icon" class="icon" />
-                        <h3>Experience</h3>
-                        <p>2+ years <br />Frontend Development</p>
+                        <h3><u>Experience</u></h3>
+                        <br>
+                        <p>Chitkara University,
+                            Student<br>
+                            September 2021 - Present (2 years+)<br>
+                            Rajpura, Punjab, India</p>
+                        <br>
+                        <h4>Frontend Development</h4>
+                        <p> 1+ year</p>
+                        <br>
+                        <h4>Android Development</h4>
+                        <p>1+ year</p>
+                        <br>
+                        <h4>Java Development</h4>
+                        <p>1+ year</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Education icon" class="icon" />
-                        <h3>Education</h3>
-                        <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+                        <h3><u>Education</u></h3>
+                        <br>
+                        <h4>Chitkara University</h4>
+                        <p>Bachelor of Engineering - BE, Computer Science · (2021 - 2025)</p>
+                        <h4>ALLEN CAREER INSTITUTE</h4>
+                        <p>(April 2019 - September 2021)</p>
+                        <h4>MDK Senior Secondary School, Pathankot </h4>
+                        <p> (March 2019 - May 2021)</p>
+                        <h4>Christ The King Convent School, Pathankot</h4>
+                        <p> (March 2009 - March 2019)</p>
+                        <h4>Kendriya Vidyalaya No. 1 (AFS) Pathankot</h4>
+                        <p> (March 2008 - March 2009)</p>
                     </div>
                 </div>
-                <div class="text-container">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-                        reprehenderit et laborum, rem, dolore eum quod voluptate
-                        exercitationem nobis, nihil esse debitis maxime facere minus sint
-                        delectus velit in eos quo officiis explicabo deleniti dignissimos.
-                        Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-                        reiciendis ea magnam? Nulla, impedit fuga!
-                    </p>
-                </div>
+                
             </div>
         </div>
+        <div class="text-container">
+            <p>
+                <img src="./assets/Summary-logo.png" alt="Summary icon" class="icon">
+                <h3><u>Summary</u></h3>
+                <p>
+                    Hii!<br>
+                    I am Tushar Mahajan a student at Chitkara University, Punjab<br>
+                    B.E.-CSE (3st year)<br>
+                    CGPA -: 9.64 in College till Date<br>
+                    Android Development(Kotlin)<br>
+                    Java - DSA<br>
+                    Web-Devlopment<br>
+                </p>
+                <h4>EDUCATIONAL DETAILS -></h4>
+                <p>
+
+                    I have completed my 10th from Christ The King Convent
+                    School ,Pathankot, Punjab (ICSE) with an aggregate of 89.67%. and
+                    90% in PCMB.<br>
+                    I have completed my 12th from MDK Arya Senior Secondary Public
+                    School, Pathankot, Punjab with an aggregate of 79.40%.<br>
+                    I have also cracked Jee Mains with 92% percentile and have also
+                    appeared in KVPY, JEE Advanced, NDA .<br>
+                </p>
+
+                <h4>Sports & Hobbies-></h4>
+                <p>
+                    I am a Cricketer , Footballer ⚽, Basketballer by Passion.<br>
+                    I play athletics sports like 100m race,200m race, Relay race , Long
+                    Jump ,Shot put,Discus Throw .
+                </p>
+            </p>
+        </div>
         <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
-    </section>
-    <section id="experience">
+    </div>
+    <div id="experience">
         <p class="section__text__p1">Explore My</p>
         <h1 class="title">Experience</h1>
         <div class="experience-details-container">
@@ -195,8 +244,8 @@
             </div>
         </div>
         <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
-    </section>
-    <section id="projects">
+    </div>
+    <div id="projects">
         <p class="section__text__p1">Browse My Recent</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
@@ -246,8 +295,8 @@
             </div>
         </div>
         <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
-    </section>
-    <section id="contact">
+    </div>
+    <div id="contact">
         <p class="section__text__p1">Get in Touch</p>
         <h1 class="title">Contact Me</h1>
         <div class="contact-info-upper-container">
@@ -260,7 +309,7 @@
                 <p><a href="https://www.linkedin.com">LinkedIn</a></p>
             </div>
         </div>
-    </section>
+    </div>
     <footer>
         <nav>
             <div class="nav-links-container">
