--- a/index.html
+++ b/index.html
@@ -156,19 +156,41 @@
         </div>
         <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
     </div>
+    <br><br><br>
     <div id="experience">
         <p class="section__text__p1">Explore My</p>
-        <h1 class="title">Experience</h1>
+        <h1 class="title">Experience & Skills</h1>
         <div class="experience-details-container">
             <div class="about-containers">
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Frontend Development</h2>
+                    <h2 class="experience-sub-title"><u>Coding/Devlopment<br>Languages</u></h2>
                     <div class="article-container">
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
+                                <h3>Java</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                            <div>
+                                <h3>Kotlin</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                            <div>
+                                <h3>C++</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                            <div>
                                 <h3>HTML</h3>
-                                <p>Experienced</p>
+                                <p>Expierenced</p>
                             </div>
                         </article>
                         <article>
@@ -181,62 +203,68 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>SASS</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-                            <div>
-                                <h3>JavaScript</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-                            <div>
-                                <h3>TypeScript</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-                            <div>
-                                <h3>Material UI</h3>
-                                <p>Intermediate</p>
+                                <h3>Java-Script</h3>
+                                <p>Beginner</p>
                             </div>
                         </article>
                     </div>
                 </div>
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Frontend Development</h2>
+                    <h2 class="experience-sub-title"><u>Achivements & Certificates</u></h2>
                     <div class="article-container">
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>PostgreSQL</h3>
-                                <p>Basic</p>
+                                <h3>Hacker Rank Gold Level</h3>
+                                <a
+                                    href="https://www.hackerrank.com/tusharmahajan080?badge=problem-solving&stars=5&level=3&hr_r=1&utm_campaign=social-buttons&utm_medium=linkedin&utm_source=badge_share&social=linkedin">Show
+                                    Credendial</a>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>Node JS</h3>
-                                <p>Intermediate</p>
+                                <h3>Google Analytics for Beginners</h3>
+                                <a
+                                    href="https://analytics.google.com/analytics/academy/certificate/dPd_Be_9SV2MUk4HFnrWLA">Show
+                                    Credendial</a>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>Express JS</h3>
-                                <p>Intermediate</p>
+                                <h3>Workshop on Enterprise Web Development Skills </h3>
+                                <a
+                                    href="https://certificate.givemycertificate.com/c/c2f1d829-7b8a-4ce5-95a6-467f50a90e2f">Show
+                                    Credendial</a>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>Git</h3>
-                                <p>Intermediate</p>
+                                <h3>C++</h3>
+                                <a
+                                    href="http://files.codingninjas.in/certificate234671461fb6d81de089467490dff6136206c04.pdf">Show
+                                    Credendial</a>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                            <div>
+                                <h3>Cyber Security</h3>
+                                <a
+                                    href="https://www.credly.com/badges/234657c6-49e5-4123-8474-15812bcc9d99?source=linked_in_profile">Show
+                                    Credential</a>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                            <div>
+                                <h3>Python</h3>
+                                <a
+                                    href="http://files.codingninjas.in/certificate18394619238f212f3241ebc51b5d37ca9f885c2.pdf">Show
+                                    Credential</a>
+                                
                             </div>
                         </article>
                     </div>
