--- a/index.html
+++ b/index.html
@@ -278,27 +278,27 @@
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
             <div class="about-containers">
-                <div class="details-container color-container">
+                <div class="details-container color-container no-hover">
                     <div class="article-container">
-                        <h2 class="experience-sub-title project-title">Web Projects</h2>
+                        <h2 class="experience-sub-title project-title"><u>Web Projects</u></h2>
                         <div class="project-container"> <!-- Wrap in a project-container -->
                             <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
                             <div class="btn-container">
                                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
-                                    Github
+                                    Go to my Web Projects
                                 </button>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="details-container color-container">
+                <div class="details-container color-container no-hover">
                     <div class="article-container">
-                        <h2 class="experience-sub-title project-title">Android Projects</h2>
+                        <h2 class="experience-sub-title project-title"><u>Android Projects</u></h2>
                         <div class="project-container"> <!-- Wrap in a project-container -->
                             <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
                             <div class="btn-container">
                                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
-                                    Github
+                                    Go to my Androids Projects
                                 </button>
                             </div>
                         </div>
@@ -319,7 +319,7 @@
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon"  />
-                <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+                <p><a href="www.linkedin.com/in/tushar-mahajan-110451225">LinkedIn</a></p>
             </div>
         </div>
     </div>
