--- a/index.html
+++ b/index.html
@@ -315,7 +315,8 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon" />
-                <p><a href="mailto:tusharmahajan080@gmail.com">tusharmahajan080@gmail.com</a></p>
+                <p><p><a href="mailto:tusharmahajan080@gmail.com">tusharmahajan080@gmail.com</a></p>
+                ></p>
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon"  />
