--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         <div class="project-container"> <!-- Wrap in a project-container -->
                             <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
                             <div class="btn-container">
-                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='webProjects.html'">
                                     Go to my Web Projects
                                 </button>
                             </div>
@@ -297,7 +297,7 @@
                         <div class="project-container"> <!-- Wrap in a project-container -->
                             <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
                             <div class="btn-container">
-                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='androidsProjects.html'">
                                     Go to my Androids Projects
                                 </button>
                             </div>
