--- a/androidProjects.html
+++ b/androidProjects.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="logo">Tushar Mahajan Web-Projects</div>
+    <div class="logo">Tushar Mahajan Android-Projects</div>
 
     <div class="btn-containerBack">
         <button onclick="location.href='index.html'">
@@ -29,28 +29,24 @@
 
     <div id="project1">
         <div class="section__pic-container-profile">
-            <img src="./assets/image-gallery.png" alt="Tushar Mahajan profile picture" />
+            <img src="./assets/project-1-1.png" alt="Tushar Mahajan profile picture" />
         </div>
         <div class="section__text">
             <p class="section__text__p4">Project 1</p>
-            <h1 class="title">My Image Gallery</h1>
+            <h1 class="title">Cricket Quiz App</h1>
             <p class="section__text__p2">About</p>
-            <p class="section__text__p3"> Responsive image gallery using HTML/CSS. Cards with drop shadow & hover
-                effects. Captions fade-in on hover. Styled heading with font change & shadow. Adaptive layout &
-                transition effects. Created by Tushar Mahajan</p>
+            <p class="section__text__p3">
+                "Experience the thrill of cricket with our Kotlin-powered quiz app! Answer 10 engaging questions to test
+                your cricket knowledge. From legendary players to iconic matches, challenge yourself and become a
+                cricket champ!"</p>
             <p class="section__text__p4"><u>Languages</u></p>
             <p class="section__text__p3">
-                HTML->84.2%
-                CSS ->15.8%
-                JavaScript->0.0%</p>
+                Kotlin -> 100%</p>
 
             <div class="btn-container">
-                <button class="btn btn-color-2"
-                    onclick="location.href='https://github.com/Tushar20-20Mahajan/ImageGallery.git'">
+                <button class="btn btn-color-1"
+                    onclick="location.href='https://github.com/Tushar20-20Mahajan/CricketQuizApp.git'">
                     Git-Hub
-                </button>
-                <button class="btn btn-color-1" onclick="location.href='https://image-gallery-nine-fawn.vercel.app/'">
-                    Live-Demo
                 </button>
             </div>
 
@@ -59,30 +55,26 @@
 
     <div id="project2">
         <div class="section__pic-container-profile">
-            <img src="./assets/myPortfolio.png" alt="Tushar Mahajan profile picture" />
+            <img src="./assets/project-2-2.png" alt="Tushar Mahajan profile picture" />
         </div>
         <div class="section__text">
             <p class="section__text__p4">Project 2</p>
-            <h1 class="title">My Portfolio</h1>
+            <h1 class="title">Age Calculator</h1>
             <p class="section__text__p2">About</p>
-            <p class="section__text__p3"> Discover my portfolio crafted with HTML, CSS, and JS. Immerse yourself in a
-                dynamic showcase of my projects, thoughtfully designed and skillfully coded. Explore a fusion of
-                creativity and technology that defines my journey as a developer.</p>
+            <p class="section__text__p3"> "AgeCalcKotlin: A sleek Kotlin app for age calculation! Convert your age into
+                seconds, minutes, days, and years with a user-friendly interface. Swiftly determine your time lived.
+                Just input your birthdate and get instant results. Simplify age analysis now!"</p>
             <p class="section__text__p4"><u>Languages</u></p>
             <p class="section__text__p3">
 
-                HTML->61.9%
-                CSS->37.3%
-                JavaScript->0.8%</p>
+                Kotlin -> 100%</p>
 
             <div class="btn-container">
-                <button class="btn btn-color-2"
-                    onclick="location.href='https://github.com/Tushar20-20Mahajan/My-Portfolio.git'">
+                <button class="btn btn-color-1"
+                    onclick="location.href='https://github.com/Tushar20-20Mahajan/AgeCalcKotlin.git'">
                     Git-Hub
                 </button>
-                <button class="btn btn-color-1" onclick="location.href='https://my-portfolio-ugdx.vercel.app/'">
-                    Live-Demo
-                </button>
+
             </div>
 
         </div>
@@ -90,31 +82,28 @@
 
     <div id="project2">
         <div class="section__pic-container-profile">
-            <img src="./assets/fugi-film.png" alt="Tushar Mahajan profile picture" />
+            <img src="./assets/project-3-3.png" alt="Tushar Mahajan profile picture" />
         </div>
         <div class="section__text">
             <p class="section__text__p4">Project 3</p>
-            <h1 class="title">Clone(FUGIFILM)</h1>
+            <h1 class="title">Calculator</h1>
             <p class="section__text__p2">About</p>
             <p class="section__text__p3">
-                Welcome to the Clone website of FujiFilm Camera! Discover the world of photography with our exquisite
-                collection of cutting-edge cameras and accessories, designed to capture life's precious moments in
-                stunning clarity and detail.</p>
+                Easily crunch numbers with our Kotlin-based Simple Calculator app. Perform basic math operations,
+                including percentage calculations, through an intuitive interface. Swiftly add, subtract, multiply,
+                divide, and find percentages. Efficiency meets simplicity in this must-have tool for your daily
+                calculations. </p>
             <p class="section__text__p4"><u>Languages</u></p>
             <p class="section__text__p3">
 
-                HTML->97.8%
-                CSS->0.6%
-                JavaScript->1.6%</p>
+                Kotlin -> 100%</p>
 
             <div class="btn-container">
-                <button class="btn btn-color-2"
-                    onclick="location.href='https://github.com/Tushar20-20Mahajan/Camera_FugiFilm_Clone.git'">
+                <button class="btn btn-color-1"
+                    onclick="location.href='https://github.com/Tushar20-20Mahajan/Calculator.git'">
                     Git-Hub
                 </button>
-                <button class="btn btn-color-1" onclick="location.href='https://camera-fugi-film-clone.vercel.app/'">
-                    Live-Demo
-                </button>
+
             </div>
 
         </div>
@@ -122,101 +111,31 @@
 
     <div id="project2">
         <div class="section__pic-container-profile">
-            <img src="./assets/Parallax.png" alt="Tushar Mahajan profile picture" />
+            <img src="./assets/project-4-4.png alt="Tushar Mahajan profile picture" />
         </div>
         <div class="section__text">
             <p class="section__text__p4">Project 4</p>
-            <h1 class="title">Parallax Effects</h1>
+            <h1 class="title">People Counter</h1>
             <p class="section__text__p2">About</p>
             <p class="section__text__p3">
-                Create captivating websites with the parallax effect using HTML and CSS. Immerse users in a dynamic 3D
-                experience as background images move at different speeds while scrolling. Elevate visual storytelling
-                and engagement with this simple yet powerful technique.</p>
+                A basic counter App with pop up .</p>
             <p class="section__text__p4"><u>Languages</u></p>
             <p class="section__text__p3">
 
-                HTML->44.9%
-                CSS->55.1%
-                JavaScript->0.0%</p>
+               Kotlin -> 100%</p>
 
             <div class="btn-container">
-                <button class="btn btn-color-2"
-                    onclick="location.href='https://github.com/Tushar20-20Mahajan/Parallax_Effect.git'">
+                <button class="btn btn-color-1"
+                    onclick="location.href='https://github.com/Tushar20-20Mahajan/Counter.git'">
                     Git-Hub
                 </button>
-                <button class="btn btn-color-1" onclick="location.href='https://parallax-effect-xi.vercel.app/'">
-                    Live-Demo
-                </button>
-            </div>
-
-        </div>
-    </div>
-
-    <div id="project2">
-        <div class="section__pic-container-profile">
-            <img src="./assets/saudhi.png" alt="Tushar Mahajan profile picture" />
-        </div>
-        <div class="section__text">
-            <p class="section__text__p4">Project 5</p>
-            <h1 class="title">Clone(Saudhi)</h1>
-            <p class="section__text__p2">About</p>
-            <p class="section__text__p3">
-                Welcome to our clone website of Saudi Arabia Tourism! Immerse yourself in the rich cultural heritage and
-                breathtaking landscapes of this majestic country, brought to life through stunning visuals and
-                interactive elements. Explore the wonders of Saudi Arabia right from your screen with our engaging HTML
-                and CSS design.</p>
-            <p class="section__text__p4"><u>Languages</u></p>
-            <p class="section__text__p3">
-
-                HTML->87.0%
-                CSS->13.0%
-                JavaScript->0.0%</p>
-
-            <div class="btn-container">
-                <button class="btn btn-color-2"
-                    onclick="location.href='https://github.com/Tushar20-20Mahajan/Clone_Saudhi.git'">
-                    Git-Hub
-                </button>
-                <button class="btn btn-color-1" onclick="location.href='https://clone-saudhi.vercel.app/'">
-                    Live-Demo
-                </button>
+                
             </div>
 
         </div>
     </div>
 
 
-    <div id="project2">
-        <div class="section__pic-container-profile">
-            <img src="./assets/chat-live.png" alt="Tushar Mahajan profile picture" />
-        </div>
-        <div class="section__text">
-            <p class="section__text__p4">Project 6</p>
-            <h1 class="title">Chat-Live</h1>
-            <p class="section__text__p2">About</p>
-            <p class="section__text__p3">
-                Chat-Live is a clone website that replicates the Login and SignUp pages of Facebook, designed with HTML
-                and CSS. Users can experience a familiar interface while accessing Chat-Live's services, reminiscent of
-                the popular social media platform.</p>
-            <p class="section__text__p4"><u>Languages</u></p>
-            <p class="section__text__p3">
-
-                HTML->72.0%
-                CSS->28.0%
-                JavaScript->0.0%</p>
-
-            <div class="btn-container">
-                <button class="btn btn-color-2"
-                    onclick="'https://github.com/Tushar20-20Mahajan/Clone_FB_Login_SignUp_Chat_Live.git'">
-                    Git-Hub
-                </button>
-                <button class="btn btn-color-1" onclick="location.href='https://clone-fb-login-sign-up-chat-live.vercel.app/'">
-                    Live-Demo
-                </button>
-            </div>
-
-        </div>
-    </div>
 
 
 
