--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                         <div class="project-container"> <!-- Wrap in a project-container -->
                             <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
                             <div class="btn-container">
-                                <button class="btn btn-color-2 project-btn" onclick="location.href='androidsProjects.html'">
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='androidProjects.html'">
                                     Go to my Android Projects
                                 </button>
                             </div>
