--- a/androidProjects.html
+++ b/androidProjects.html
@@ -111,7 +111,7 @@
 
     <div id="project2">
         <div class="section__pic-container-profile">
-            <img src="./assets/project-4-4.png alt="Tushar Mahajan profile picture" />
+            <img src="./assets/project-4-4.png" alt="Tushar Mahajan profile picture" />
         </div>
         <div class="section__text">
             <p class="section__text__p4">Project 4</p>
