--- a/webProjects.html
+++ b/webProjects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Projects (Tushar Mahajan)</title>
-    <link rel="stylesheet" href="styleweb.css">
+    <link rel="stylesheet" href="styleWeb.css">
     <link rel="stylesheet" href="mediaqueries.css">
     <link rel="icon" type="assets/x-icon" href="/assets/favicon.ico">
     <meta name="description" content="
