--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     <div class="contact-info-container">
                         <img src="./assets/phone.png" alt="Email icon" class="icon contact-icon email-icon" />
                         <p>
-                            <p<a href="tel:+91 7006499240">+91 7006499240</a>
+                            <p><a href="tel:+91 7006499240">+91 7006499240</a>
                         </p>
                         </p>
                     </div>
