--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                     </div>
                     <div class="contact-info-container">
                         <img src="./assets/phone.png" alt="Phone icon" class="icon contact-icon email-icon" />
-                        <p><a href="tel:+91 7006499240">Call us at +91 7006499240</a>
+                        <p><a href="tel:+91 7006499240">Phone Number -: +91 7006499240</a>
                         </p>
                     </div>
                     <div class="contact-info-container">
@@ -357,7 +357,10 @@
                             pattern="[0-9]{10}" title="Please enter a 10-digit phone number (numbers only)">
                         <input type="email" name="email" placeholder="Your Email" required>
                         <textarea name="Message" rows="6" placeholder="Your Message" required></textarea>
-                        <button type="submit">Submit</button>
+                        <div class="submitButton">
+                            <button type="submit" class="btn btn-color-1">Submit</button>
+                        </div>
+                        
                     </form>
 
                 </div>
