--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                             onclick="location.href='https://www.youtube.com/channel/UCCKlzjC09UeUeCABtaszHbg'">
                     </div>
                     <div id="download-cv">
-                        <a class="btn btn-color-1" href="./assets/Resume.pdf" download>Download my Resume</a>
+                        <a class="btn btn-color-1" href="./assets/Resume.pdf" download>Download Resume</a>
                     </div>
             </div>
             <div class="contact-right">
